Fix tablet layout alignment for projects section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,6 +256,7 @@ footer svg:hover path {
     text-transform: uppercase;
     font-weight: 500;
     margin: 10px 0px;
+
 }
 
 .projects__languages {
@@ -294,6 +295,11 @@ footer svg:hover path {
     gap: 2px;
 }
 
+.projects__box {
+    /* display: flex; */
+    /* flex: 1 1; */
+}
+
 .projects__img {
     display: flex;
     position: relative;
@@ -302,9 +308,20 @@ footer svg:hover path {
     overflow: hidden;
     /* max-height: 300px; */
     max-height: 300px;
+    flex: 1;
+}
+
+.projects__text {
+    /* border: 2px solid green; */
+    /* min-height: 300px; */
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .projects__img img {
+    /* border: 2px solid red; */
     width: 100%;
     object-fit: cover;
     object-position: 100% 0;
@@ -733,7 +750,7 @@ section {
         /* flex-basis: 45%; */
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: space-around;
     }
     
     .angle-slopeup {
